k8s-specifications/result-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: result
  name: result
spec:
  replicas: 2
  selector:
    matchLabels:
      app: result
  template:
    metadata:
      labels:
        app: result
    spec:
      containers:
      - image: wayneisbatman/examplevotingapp_result
        name: result
        ports:
        - containerPort: 80
          name: result
