k8s-specifications/result-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: result-ingress
  namespace: voting-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /   
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /result(/|$)
        pathType: ImplementationSpecific    
        backend:
          service:
            name: result
            port:
              number: 5001
