k8s-specifications/vote-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vote-ingress
  namespace: voting-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /   
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /vote    
        pathType: Prefix  
        backend:
          service:
            name: vote-service
            port:
              number: 80
